// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should render correctly 1`] = `
<label
  htmlFor="comp1"
>
  Label: 
  <Component
    id="comp1"
  />
</label>
`;

exports[`TextInput ыhould substitute a label instead of id if the id is not specified 1`] = `
<label
  htmlFor="label"
>
  Label: 
  <Component
    id="label"
  />
</label>
`;
